# A-Simple-File-Encryptor-Decryptor

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SCOPE.md
src/: decryption.c  decryption.h  encryption.c  encryption.h  main.c
tests/: CMakeLists.txt  test_encryption.c
